<resources>
    <string name="app_name">Green Garden</string>
    <string name="back_button_description">Regresar</string>
    <string name="water">Agua</string>
    <string name="fertilizer">Abonos</string>
    <string name="energy">Energía</string>
    <string name="save">Guardar</string>
    <!--Forms-->
    <string name="mail">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="link_signup">¿No tienes una cuenta?\nRegístrate aquí.</string>
    <string name="link_login">Ya tengo una cuenta.\n¡Vamos!</string>
    <string name="full_name">Nombre y apellido</string>
    <string name="city">Ciudad</string>
    <string name="signup">Registrarse</string>
    <string name="user_done">¡Usuario creado con éxito!</string>
    <string name="user_exists">Usuario con e-mail ya está registrado en la aplicación, inicia sesión.</string>
    <string name="wrong_user">Las credenciales ingresadas son incorrectas</string>
    <!--Navigation menu-->
    <string name="menu_home">Home</string>
    <string name="menu_user">Usuario</string>
    <string name="menu_logout">Salir</string>
    <!--Home-->
    <string name="welcome">Bienvenido</string>
    <string name="categories">Categorías</string>
    <string name="stats">Estadísticas</string>
    <string name="tips">Consejos</string>
    <!--Register Categories-->
    <string name="cons_register">Registrar consumos</string>
    <string name="water_reg_message">Registra tus consumos de agua llenando el siguiente formulario.</string>
    <string name="fertilizer_reg_message">Registra tus consumos de fertilizantes llenando el siguiente formulario.</string>
    <string name="energy_reg_message">Registra tus consumos de energía llenando el siguiente formulario.</string>
    <string name="save_success">¡Información almacenada con éxito!</string>
    <string name="empty_fields">¡Todos los campos deben estár diligenciados!</string>
    <string name="value">Valor:</string>
    <string name="month">Mes:</string>
    <string name="amount">Cant.:</string>
    <string name="liters">Litros de agua</string>
    <string name="kilos">Cantidad en kilos</string>
    <string name="kwats">Cantidad en Kilovatios</string>
    <!-- Stats -->
    <string name="empty_message">No hay registros disponibles</string>
    <string name="average">Promedio</string>
    <string name="wipe_data">Limpiar datos</string>
    <string name="alert_subtitle">Confirmar Borrado</string>
    <string name="alert_message">¿Estás seguro de que deseas borrar los datos?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
