<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_logo_foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/pacifico"
        android:text="@string/app_name"
        android:textColor="@color/app_strong"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/etFullName"
        style="@style/field_form"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etEmailSignup"
        style="@style/field_form"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etCity"
        style="@style/field_form"
        android:layout_height="wrap_content"
        android:autofillHints="postalAddress"
        android:hint="@string/city"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPasswordSignup"
        style="@style/field_form"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btSignup"
        style="@style/button_form"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/tvAccountExists"
        style="@style/link_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/link_login" />

</LinearLayout>
