<!-- res/layout/activity_login.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:layout_width="137dp"
        android:layout_height="131dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_logo_foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/app_strong"
        android:fontFamily="@font/pacifico"
        />

    <EditText
        android:id="@+id/etEmailLogin"
        style="@style/field_form"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPasswordLogin"
        style="@style/field_form"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btLogin"
        style="@style/button_form"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvRegister"
        style="@style/link_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/link_signup"
        />

</LinearLayout>
