<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.FertilizerRegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/fertilizer_color"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/ibBackButtonFertilizerCons"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_description"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_arrow"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/cons_register"
            android:textColor="#616161"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/fertilizer"
        android:src="@drawable/img_fertilizer" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_light_italic"
        android:text="@string/fertilizer_reg_message"
        android:textAlignment="center"
        android:textColor="@color/app_purple_2"
        android:textSize="17sp"
        tools:ignore="TextSizeCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TextView
                style="@style/label_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/etKilos"
                style="@style/input_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/kilos"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TextView
                style="@style/label_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/etFertilizerPrice"
                style="@style/input_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Valor"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:paddingTop="3dp">

            <TextView
                style="@style/label_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/month"
                tools:ignore="TextSizeCheck" />

            <Spinner
                android:id="@+id/spMonths"
                style="@style/input_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/months"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/btSaveFertilizer"
            style="@style/button_form"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/save" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>