<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".HomeActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="142dp"
        android:layout_height="132dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bonsai" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:fontFamily="@font/pacifico"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/app_purple_1"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="2"
        android:rowCount="1"
        android:paddingHorizontal="35dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btCategories"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/categories"
                android:src="@drawable/cat_1" />

            <TextView
                style="@style/label_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btStats"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/stats"
                android:src="@drawable/stats"/>

            <TextView
                style="@style/label_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_columnWeight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btTips"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/tips"
                android:src="@drawable/tips" />

            <TextView
                style="@style/label_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tips" />

        </LinearLayout>

    </GridLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/design_default_color_background"
        android:elevation="7dp"
        app:itemBackground="@color/app_purple_2"
        app:itemIconSize="30dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.appcompat.widget.LinearLayoutCompat>
