<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activities.TipsActivity">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/idea"
        android:contentDescription="@string/tips" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:text="@string/tips"
        android:textStyle="bold"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <Button
            android:id="@+id/btWaterTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:backgroundTint="@color/water_color"
            android:drawableLeft="@drawable/ic_water_drop"
            android:text="@string/water"
            android:textSize="23sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btFertilizerTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:backgroundTint="@color/fertilizer_color"
            android:drawableLeft="@drawable/ic_flower"
            android:text="@string/fertilizer"
            android:textSize="23sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btEnergyTip"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:backgroundTint="@color/energy_color"
            android:drawableLeft="@drawable/ic_energy"
            android:text="@string/energy"
            android:textSize="23sp"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:background="@color/design_default_color_background"
        android:elevation="7dp"
        app:itemBackground="@color/tips_bar_bg"
        app:itemIconSize="30dp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.appcompat.widget.LinearLayoutCompat>