<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".WaterRegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/app_purple_2"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/ibBackButtonWaterCons"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_description"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/cons_register"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/water"
        android:src="@drawable/img_water" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/lato_light_italic"
        android:textSize="17sp"
        android:textColor="@color/app_purple_2"
        android:text="@string/water_reg_message"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TextView
                style="@style/label_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Litros:" />

            <EditText
                android:id="@+id/etLiters"
                style="@style/input_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Litros de agua"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TextView
                style="@style/label_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Valor:" />

            <EditText
                android:id="@+id/etWaterPrice"
                style="@style/input_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="Valor"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:paddingTop="3dp">

            <TextView
                style="@style/label_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Mes:" />

            <Spinner
                android:id="@+id/spMonths"
                style="@style/input_cons_form"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/months" />

        </LinearLayout>

        <Button
            android:id="@+id/btSaveWater"
            style="@style/button_form"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/save" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>