<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.CategoriesPanelFragment">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/categories" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:layout_marginTop="10dp"
        android:text="@string/categories"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:columnCount="2"
            android:paddingHorizontal="35dp"
            android:rowCount="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibWaterCat"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/water"
                    android:src="@drawable/img_water" />

                <TextView
                    style="@style/label_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibFertilizerCat"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/fertilizer"
                    android:src="@drawable/img_fertilizer" />

                <TextView
                    style="@style/label_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fertilizer" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibEnergyCat"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/energy"
                    android:src="@drawable/img_energy" />

                <TextView
                    style="@style/label_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/energy" />

            </LinearLayout>

        </GridLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>